# a-share-master

./: .env.example  .gitignore  README.md  SKILL.md  config.json.example  depends_on.yml  pyproject.toml
references/: CHANGELOG.md  INSTALL.md  SECURITY.md  index.md  install.md  pitfalls.md
references/core/: prompt-templates.md
references/flow/: README.md
references/flow/common/: 03-get-data.md
references/flow/evolve/: case-record.md  model-tune.md  rule-update.md
references/flow/learn/: case-analysis.md  daily-review.md  error-reflection.md  experience.md  market-outlook.md  market-summary.md
references/framework/: ARCHITECTURE.md  MODULE_GUIDE.md  PLUGIN_GUIDE.md
references/guides/: data-sources.md  invocation.md
references/trading/: a-share-rules.md  basic-strategies.md  industry-codes.md  money-management.md  pitfalls.md  sentiment-analysis.md
references/workflows/: high-pr-picker.md  integrated-expert.md  market-synthesis.md  post-market.md  pre-market.md  trading-plan.md
scripts/: check_risk.py  config_manager.py  market_analysis.py  post_market.py  pre_market.py  run_skill.py  run_tests.sh  stock_picker.py  trading_plan.py
src/: __init__.py  cli.py  models.py  skill.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  analyzer.py  pipeline.py  rating.py  risk_checker.py
src/modules/: __init__.py  post_market.py  pre_market.py  stock_picker.py  trading_plan.py
src/plugins/: __init__.py  base.py
src/providers/: __init__.py  base.py  default_data.py  offline.py
tests/skills/: __init__.py  test_a_shares_master_skill.py
(+6 files in other folders)
